web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__join__examples__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\njoin side:left positions (employees.id==positions.employee_id)\n"
---
SELECT
    employees.*,
    positions.*
FROM employees
LEFT JOIN positions ON employees.id = positions.employee_id
