web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__join__examples__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\njoin side:left p=positions (employees.id==p.employee_id)\n"
---
SELECT employees.*, p.*
FROM employees
LEFT JOIN positions AS p ON employees.id = p.employee_id
