web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__join__examples__3.snap
---
source: web/book/tests/documentation/book.rs
expression: "from tracks\njoin side:inner artists (\n  this.id==that.artist_id\n)\n"
---
SELECT tracks.*, artists.*
FROM tracks
JOIN artists ON tracks.id = artists.artist_id
