web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__join__examples__4.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\njoin positions (==emp_no)\n"
---
SELECT
    employees.*,
    positions.*
FROM employees
INNER JOIN positions ON employees.emp_no = positions.emp_no
